# brasil-cli

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  skill.md
brasil_cli/: __init__.py  cli.py  http_client.py  output.py
brasil_cli/providers/: bacen.py  brasilapi.py  camara.py  ibge.py  senado.py  transparencia.py
tests/: test_bacen.py  test_brasilapi.py  test_camara.py  test_http_client.py  test_ibge.py  test_senado.py  test_transparencia.py
