[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brasil-cli"
version = "0.1.0"
description = "CLI para consulta de APIs públicas brasileiras — Bacen, IBGE, Câmara, BrasilAPI e Portal da Transparência"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Marcos" }]
keywords = ["brasil", "cli", "bacen", "ibge", "governo", "api"]

dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
brasil = "brasil_cli.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
